--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"
+<!--com.murali.nlevel.NLevelMainActivity-->
+        <activity android:name="com.murali.nlevel.NLevelMainActivity"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
