--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<!--com.murali.nlevel.NLevelMainActivity-->
-        <activity android:name="com.murali.nlevel.NLevelMainActivity"
-            >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+        <!--com.murali.nlevel.NLevelMainActivity
+com.murali.newLevel.NLevelMainActivity
+
+com.murali.customexpand.MultilevelTreeListView-->
+
+        <activity android:name="com.murali.newLevel.NLevelMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
