--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         <!--com.murali.nlevel.NLevelMainActivity
 com.murali.newLevel.NLevelMainActivity
 com.murali.multilevel.MainActivity
-com.murali.customexpand.MultilevelTreeListView-->
+com.murali.customexpand.MultilevelTreeListView
+com.murali.treeViewSample.demo.TreeViewListDemo
+com.murali.multilevel.MainActivity
+com.murali.treeview.TreeViewActivity
+com.murali.customtree.TreeViewActivity
+-->
 
-        <activity android:name="com.murali.multilevel.MainActivity">
+        <activity android:name="com.murali.customtree.SubTree.TreeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
