--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         <!--com.murali.nlevel.NLevelMainActivity
 com.murali.newLevel.NLevelMainActivity
 com.murali.multilevel.MainActivity
-com.murali.customexpand.MultilevelTreeListView
 com.murali.treeViewSample.demo.TreeViewListDemo
 com.murali.multilevel.MainActivity
 com.murali.treeview.TreeViewActivity
@@ -21,7 +20,7 @@ com.murali.customtree.TreeViewActivity
 com.murali.customtree.SubTree.TreeActivity
 -->
 
-        <activity android:name="com.murali.customtree.TreeViewActivity">
+        <activity android:name="com.murali.customtree.SubTree.TreeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
