--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--com.murali.nlevel.NLevelMainActivity
-com.murali.newLevel.NLevelMainActivity
-com.murali.multilevel.MainActivity
-com.murali.treeViewSample.demo.TreeViewListDemo
+<!--com.murali.treeViewSample.demo.TreeViewListDemo
 com.murali.multilevel.MainActivity
 com.murali.treeview.TreeViewActivity
 com.murali.customtree.TreeViewActivity
-com.murali.customtree.SubTree.TreeActivity
 -->
 
         <activity android:name="com.murali.multilevel.MainActivity">
