--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--com.murali.customexpandable.kotlin.MainActivity-->
+        <!--com.murali.customexpandable.kotlin.MainActivity
+
+        com.murali.customexpandable.java.TreeViewActivity-->
         <activity android:name="com.murali.customexpandable.java.TreeViewActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
